csc416/assignment_6/tests/pass/semantic/1/Bool.ram15
class Prog3Test2{
    public static void main(String[] args){
        print(new BoolTest().Run());
    }
}
class BoolTest{
    int i;
    int j;
    public int Run(){
        int k;
        int l;
        k = 0;
        j = 1;
        k = k + 3 * j;
        return k;
    }

}