csc416/assignment_6/tests/fail/semanticerrors/1/joefail3.ram15
class Test1 {
    public static void main(String[] a) {
        print(new Test1Class().doStuff());
    }
}
class Test1Class {
    public boolean doStuff() {
        return true;
    }
}